--- a/sass/bootstrap.sass
+++ b/sass/bootstrap.sass
@@ -220,3 +220,97 @@ table
 	.table-bordered td
 		border: 1px solid #ddd !important
 
+*
+	-webkit-box-sizing: border-box
+	-moz-box-sizing: border-box
+	box-sizing: border-box
+	
+html
+	font-size: 62.5%
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+
+body
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+	font-size: 14px
+	line-height: 1.428571429
+	color: #333333
+	background-color: #ffffff
+	
+input,
+button,
+select,
+textarea
+	font-family: inherit
+	font-size: inherit
+	line-height: inherit
+	
+a
+	color: #428bca
+	text-decoration: none
+	
+a:hover,
+a:focus
+	color: #2a6496
+	text-decoration: underline
+
+a:focus
+	outline: thin dotted #333
+	outline: 5px auto -webkit-focus-ring-color
+	outline-offset: -2px
+
+img
+	vertical-align: middle
+
+.img-responsive
+	display: inline-block
+	height: auto
+	max-width: 100%
+	
+.img-rounded
+	border-radius: 6px
+
+.img-circle
+	border-radius: 500px
+
+hr
+	margin-top: 20px
+	margin-bottom: 20px
+	border: 0
+	border-top: 1px solid #eeeeee
+
+p
+	margin: 0 0 10px
+
+.lead
+	margin-bottom: 20px
+	font-size: 16.099999999999998px
+	font-weight: 200
+	line-height: 1.4
+
+@media (min-width: 768px)
+	.lead
+		font-size: 21px
+
+small
+	font-size: 85%
+
+cite
+	font-style: normal
+	
+.text-muted
+	color: #999999
+.text-primary
+	color: #428bca
+.text-warning
+	color: #c09853
+.text-danger
+	color: #b94a48
+.text-success
+	color: #468847
+.text-info
+	color: #3a87ad
+.text-left
+	text-align: right
+.text-center
+	text-align: center
+
