--- a/stylesheets/bootstrap.css
+++ b/stylesheets/bootstrap.css
@@ -282,3 +282,127 @@ table {
   .table-bordered th,
   .table-bordered td {
     border: 1px solid #dddddd !important; } }
+/* line 223, ../sass/bootstrap.sass */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+/* line 228, ../sass/bootstrap.sass */
+html {
+  font-size: 62.5%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+
+/* line 232, ../sass/bootstrap.sass */
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857;
+  color: #333333;
+  background-color: white; }
+
+/* line 239, ../sass/bootstrap.sass */
+input,
+button,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit; }
+
+/* line 247, ../sass/bootstrap.sass */
+a {
+  color: #428bca;
+  text-decoration: none; }
+
+/* line 251, ../sass/bootstrap.sass */
+a:hover,
+a:focus {
+  color: #2a6496;
+  text-decoration: underline; }
+
+/* line 256, ../sass/bootstrap.sass */
+a:focus {
+  outline: thin dotted #333333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px; }
+
+/* line 261, ../sass/bootstrap.sass */
+img {
+  vertical-align: middle; }
+
+/* line 264, ../sass/bootstrap.sass */
+.img-responsive {
+  display: inline-block;
+  height: auto;
+  max-width: 100%; }
+
+/* line 269, ../sass/bootstrap.sass */
+.img-rounded {
+  border-radius: 6px; }
+
+/* line 272, ../sass/bootstrap.sass */
+.img-circle {
+  border-radius: 500px; }
+
+/* line 275, ../sass/bootstrap.sass */
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid #eeeeee; }
+
+/* line 281, ../sass/bootstrap.sass */
+p {
+  margin: 0 0 10px; }
+
+/* line 284, ../sass/bootstrap.sass */
+.lead {
+  margin-bottom: 20px;
+  font-size: 16.1px;
+  font-weight: 200;
+  line-height: 1.4; }
+
+@media (min-width: 768px) {
+  /* line 291, ../sass/bootstrap.sass */
+  .lead {
+    font-size: 21px; } }
+/* line 294, ../sass/bootstrap.sass */
+small {
+  font-size: 85%; }
+
+/* line 297, ../sass/bootstrap.sass */
+cite {
+  font-style: normal; }
+
+/* line 300, ../sass/bootstrap.sass */
+.text-muted {
+  color: #999999; }
+
+/* line 302, ../sass/bootstrap.sass */
+.text-primary {
+  color: #428bca; }
+
+/* line 304, ../sass/bootstrap.sass */
+.text-warning {
+  color: #c09853; }
+
+/* line 306, ../sass/bootstrap.sass */
+.text-danger {
+  color: #b94a48; }
+
+/* line 308, ../sass/bootstrap.sass */
+.text-success {
+  color: #468847; }
+
+/* line 310, ../sass/bootstrap.sass */
+.text-info {
+  color: #3a87ad; }
+
+/* line 312, ../sass/bootstrap.sass */
+.text-left {
+  text-align: right; }
+
+/* line 314, ../sass/bootstrap.sass */
+.text-center {
+  text-align: center; }
